chore: update popup.html

--- a/popup.html
+++ b/popup.html
@@ -440,7 +440,7 @@
       <img id="logo-text" src="HashChrome.png" alt="hashchrome logo">
     </div>
 
-    <h1>Proofread Your Messages on WhatsApp & Slack Instantly</h1>
+    <h1>Proofread Your Messages Instantly</h1>
     <div>
     </div class="save-part">
     <div id="input-container">
