Localize popup.html
Make `popup.html` multi-locals by replacing hardcoded text with `__MSG_` placeholders and adding corresponding localized messages to `_locales` JSON files.

* **Localized Messages**:
  - Add localized messages for `popup.html` in `_locales/ar/messages.json`, `_locales/de/messages.json`, `_locales/en/messages.json`, `_locales/es/messages.json`, `_locales/fr/messages.json`, `_locales/id/messages.json`, `_locales/ja/messages.json`, `_locales/pt/messages.json`, `_locales/ru/messages.json`, `_locales/tr/messages.json`, and `_locales/zh/messages.json`.

* **Update `popup.html`**:
  - Replace hardcoded text with `__MSG_` placeholders for title, input label, save button, check button, remove button, usage instructions, usage steps, and link text.

* **Update `manifest.json`**:
  - Add localization for `popup.html` using `__MSG_` placeholders.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/sazaktechs/hashchrome?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/popup.html
+++ b/popup.html
@@ -440,17 +440,17 @@
       <img id="logo-text" src="HashChrome.png" alt="hashchrome logo">
     </div>
 
-    <h1>Proofread Your Messages Instantly</h1>
+    <h1>__MSG_popup_title__</h1>
     <div>
     </div class="save-part">
     <div id="input-container">
-      <label id="input-label">&#x1F511 OpenAI or Gemini API Key</label>
-      <input type="password" id="apiKeyInput" placeholder="Your API Key..." required>
+      <label id="input-label">&#x1F511 __MSG_popup_input_label__</label>
+      <input type="password" id="apiKeyInput" placeholder="__MSG_popup_input_label__" required>
     </div>
-    <button id="saveApiKey">Save API Key</button>
+    <button id="saveApiKey">__MSG_popup_save_button__</button>
     <div>
     </div>
-    <button id="checkApiKey">API Key Status</button>
+    <button id="checkApiKey">__MSG_popup_check_button__</button>
     <div id="api-key-message-container">
       <span id="api-key-icon"></span>
       <span id="api-key-message"></span>
@@ -462,20 +462,19 @@
     <div id="spinner" style="display: none;">
       <div class="spinner"></div>
     </div>
-    <button id="removeApiKey">Remove API Key</button>
+    <button id="removeApiKey">__MSG_popup_remove_button__</button>
 
     <div id="usage">
-      <h3>&#x1F4DD; How to Proofread</h3>
+      <h3>&#x1F4DD; __MSG_popup_usage_instructions__</h3>
 
       <ol>
-        <li>Save your API key.</li>
-        <li>Write your message.</li>
-        <li>Press <b>Ctrl+Shift+K</b> (Mac: <b>Cmd+Shift+K</b>) <i>OR</i> right-click and choose "Proofread".</li>
+        <li>__MSG_popup_usage_step1__</li>
+        <li>__MSG_popup_usage_step2__</li>
+        <li>__MSG_popup_usage_step3__</li>
       </ol>
     </div>
 
-    <div id="link"> <a href="https://sazaktechs.com/hashchrome.html" target="_blank">&#x1F4DC How can I get an API
-        Key?</a></div>
+    <div id="link"> <a href="https://sazaktechs.com/hashchrome.html" target="_blank">&#x1F4DC __MSG_popup_link_text__</a></div>
   </div>
 
   <!-- Modal -->
