--- a/popup.html
+++ b/popup.html
@@ -440,17 +440,17 @@
       <img id="logo-text" src="HashChrome.png" alt="hashchrome logo">
     </div>
 
-    <h1>__MSG_popup_title__</h1>
+    <h1 id="title"></h1>
     <div>
     </div class="save-part">
     <div id="input-container">
-      <label id="input-label">&#x1F511 __MSG_popup_input_label__</label>
+      <label id="input-label">&#x1F511 </label>
       <input type="password" id="apiKeyInput" placeholder="__MSG_popup_input_label__" required>
     </div>
-    <button id="saveApiKey">__MSG_popup_save_button__</button>
+    <button id="saveApiKey"></button>
     <div>
     </div>
-    <button id="checkApiKey">__MSG_popup_check_button__</button>
+    <button id="checkApiKey"></button>
     <div id="api-key-message-container">
       <span id="api-key-icon"></span>
       <span id="api-key-message"></span>
@@ -462,19 +462,20 @@
     <div id="spinner" style="display: none;">
       <div class="spinner"></div>
     </div>
-    <button id="removeApiKey">__MSG_popup_remove_button__</button>
+    <button id="removeApiKey"></button>
 
     <div id="usage">
-      <h3>&#x1F4DD; __MSG_popup_usage_instructions__</h3>
+      <h3>&#x1F4DD; </h3>
 
       <ol>
-        <li>__MSG_popup_usage_step1__</li>
-        <li>__MSG_popup_usage_step2__</li>
-        <li>__MSG_popup_usage_step3__</li>
+        <li></li>
+        <li></li>
+        <li></li>
       </ol>
     </div>
 
-    <div id="link"> <a href="https://sazaktechs.com/hashchrome.html" target="_blank">&#x1F4DC __MSG_popup_link_text__</a></div>
+    <div id="link"> <a href="https://sazaktechs.com/hashchrome.html" target="_blank">&#x1F4DC How can I get an API
+        Key?</a></div>
   </div>
 
   <!-- Modal -->
